# pyAIHorde

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
aihorde/: __init__.py  client.py  models.py
