[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "aihorde"
version = "0.1.0"
description = "A Python client for AI Horde API"
authors = ["LapisMYT"]

[tool.poetry.dependencies]
python = "^3.8"
msgspec = "^1.0"
aiohttp = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.scripts]
aihorde-cli = 'aihorde.cli:main'

