[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aihorde"
version = "0.4"
description = "Python client for AI Horde API"
dependencies = ["aiohttp", "msgspec"]
authors = [
    {name = "LapisMYT (Nikita Ugnich)", email = "nikitagavrilin005@gmail.com"}
]
readme = "README.md"
classifiers = ["Development Status :: 4 - Beta",
              "Framework :: aiohttp",
              "Intended Audience :: Developers",
              "Programming Language :: Python :: 3.11",
              "Programming Language :: Python :: 3.12",
              "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
              "Topic :: Scientific/Engineering :: Artificial Intelligence",
              "Topic :: Scientific/Engineering :: Image Processing",
              "Topic :: Scientific/Engineering :: Visualization",
              "Topic :: Software Development :: Libraries",
              "Topic :: Software Development :: Libraries :: Python Modules",
              "Topic :: Text Processing",
              "Typing :: Typed"]

[project.urls]
Homepage = "https://github.com/lapismyt/pyAIHorde"
